# lang

./: .gitignore  CMakeLists.txt  README.md  build.sh  cumulative_fix.patch  data_full_test.lang  jvm_stackcheck.py  lang-array-return-fix.patch  lang-func-returns.patch  new_test.sh  out.j  out.py  out_arr_store.j  run_interpreter.tests.sh  run_parser_tests.sh  run_tests.sh  temp_parser_test.lang  test.lan  test.lang  teste_sintaxe.lang
lang/: data_syntax_test.lang  output.txt  test.lang
lang/src/ast/: AST.hpp  ArrayAccessNode.hpp  BinaryOpNode.hpp  BlockCmdNode.hpp  BoolLiteralNode.hpp  FunCallCmdNode.hpp  FunCallNode.hpp  FunDefNode.hpp  (+3 more)
lang/testes/: types_function.sh
sanity/: arrays.lan  multi.lan  records.lan
src/: CMakeLists.txt  debug.hpp  main.cpp  main2.cpp  main3.cpp
src/adt/: adt.cpp  adt.hpp
src/ast/: AST.hpp1  ArrayAccessNode.hpp  AssignCmdNode.hpp  CharLiteralNode.hpp  Command.hpp  DataDefNode.hpp  Expression.hpp  FieldAccessNode.hpp  FloatLiteralNode.hpp  IfCmdNode.hpp  IntLiteral.hpp  IterateCmdNode.hpp  NewExprNode.hpp  Node.hpp  PrintCmd.hpp  ProgramNode.hpp  ReturnCmdNode.hpp  TypeNode.hpp  UnaryOpNode.hpp  VarAccessNode.hpp  Visitor.hpp  ast.cpp  ast.hpp
src/codegen/: JasminGen.cpp  JasminGen.hpp  SourceGenPython.cpp  SourceGenPython.hpp
src/interpreter/: Interpreter.cpp  Interpreter.cpp.rej  Interpreter.hpp  interpreter.cpp  interpreter.hpp
src/lexer/: lexer.cpp  lexer.hpp  lexer.l  lexer.l.rej  lexer.txt  lexer_original.l
src/parser/: parser.cpp  parser.hpp  parser.y
src/runtime/: ArrayValue.hpp  BoolValue.hpp  RecordValue.hpp  Value.hpp  runtime.cpp  runtime.hpp
src/semantic/: semantic.cpp  semantic.hpp
src/symbols/: symbols.cpp  symbols.hpp
src/typecheck/: Type.hpp  TypeChecker.cpp  TypeChecker.cpp.rej  TypeChecker.hpp
testes/: sintaxe_certo.sh  sintaxe_errado.sh  types_errado.sh  types_full.sh
(+13 files in other folders)
